--- a/sass/index.sass
+++ b/sass/index.sass
@@ -4,3 +4,71 @@
 html, body 
     background: #222222
     color: white 
+
+#oou-display
+    position: absolute
+    width: 100%
+    @include flex(column, center, center)
+    z-index: 2
+    height: 100%
+    animation: shrink 1.3s ease-in-out 9s forwards
+
+    & > #oou-text
+        @include flex(row, center, center)
+        font-size: clamp(2rem, 10vw, 5rem)
+        gap: 20px
+        font-weight: 600
+
+        & > *
+            opacity: 0
+
+        & > #oou-text-1
+            animation: fadeIn 1.3s ease-in-out 2s forwards
+            color: #3eee45
+
+        & > #oou-text-2
+            animation: fadeIn 1.3s ease-in-out 3s forwards
+            color: white
+
+        & > #oou-text-3
+            animation: fadeIn 1.3s ease-in-out 4s forwards
+            color: #eb413c
+
+    & > #oou-desc
+        font-size: clamp(1rem, 6vw, 3rem)
+        opacity: 0
+        animation: fadeIn 1.3s ease-in-out 7s forwards
+
+#oou-purpose
+    width: 50%
+    height: calc(100vh - 100px)
+    position: absolute
+    font-size: clamp(1rem, 3vw, 2rem)
+    @include flex(column, center, center)
+    z-index: 2
+    left: 50%
+    top: 100px
+    padding: 25px
+    opacity: 0
+    animation: fadeIn 1.3s ease-in-out 10s forwards
+
+    & > .oou-purpose-text
+        & > #technoblade-rank
+            @include color-text(#fe5afc)
+
+        & > #faceplate-rank
+            @include color-text(#fb575b)
+
+        & > #sarcoma-color
+            @include color-text(#f0b65c)       
+
+#people-oou
+    width: 100%
+    height: 100vh
+    object-fit: cover
+
+@keyframes shrink
+    from
+        width: 100%
+    to
+        width: 50%
